--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "serve-favicon": "^2.5.0",
     "socket.io": "^4.2.0",
     "uuidv4": "^6.2.12"
   }
